# SpaceTimePandas

./: .gitignore  Dockerfile  LICENSE  README.md  census.md  demo.ipynb  demo_climate.ipynb  demo_location.ipynb  demo_pipeline.ipynb  demo_weather.ipynb  example.ipynb  noaa.ipynb  osm.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: linter.yaml  publish.yaml  tests.yaml
stpd/: __init__.py  base.py  climateweathergc.py  constants.py  openstreetmap.py  openweathermap.py  pipeline.py  simplemaps.py  utils_geocode.py
stpd/event/: __init__.py  _event.py
stpd/fourier/: __init__.py  _fourier.py
stpd/location/: __init__.py  base.py  simplemaps.py
stpd/location/openstreetmap/: __init__.py  _openstreetmap.py
stpd/newlocation/: _osm_features.py  openstreetmap.py
stpd/nytsentiment/: __init__.py  _nytsentiment.py
stpd/openrouteservice/: __init__.py  _openrouteservice.py
stpd/openstreetmap/: __init__.py  _openstreetmap.py  _osm_features.py
stpd/weather/: __init__.py  base.py  climateweathergc.py  noaa.py
tests/: test_all.py  test_dummy.py  test_event.py  test_fourier.py  test_location.py  test_nytsentiment.py  test_openrouteservice.py  test_openstreetmap.py  test_pipeline.py  test_weather.py
