[metadata]
name = SpaceTimePandas
author = Tianle Chen
author_email = tianlechen@gmail.com
description = Location date features as dataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tianle91/SpaceTimePandas
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    geopy >= 2.1.0
    openrouteservice >= 2.3.3
    OSMPythonTools >= 0.3.5
python_requires = >=3.7
use_scm_version = True
setup_requires =
    setuptools_scm

[options.packages.find]
exclude =
    tests

[flake8]
ignore =
    E133, # closing bracket is missing indentation
    W503, # line break before binary operator
    E501, # line too long
exclude =
    __init__.py,
    sample/*,
max-line-length = 100
